--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,5 @@
-$url: "https://github.com/HDRP0720/overwatchUI/tree/master/images";
+// $url: "https://github.com/HDRP0720/overwatchUI/blob/master/images";
+$url: "./images";
 
 body{
   height: 100vh;
